style.css
/* ... */
.article-title h1{
  font-size: 1.9em;
  font-family: 'Gotham''gotham-ultra';
  font-weight: bolder;
    position: static;
    margin-bottom: 30px;
    padding-left:15px;
    padding-right: 0px;
        margin-top: 0px;

}

.article-title2 h1{
  font-size: 1.4em;
    font-family: 'Gotham''gotham-ultra';
  font-weight: bolder;
    position: static;
    padding-left:15px;
    padding-right: 0px;
    margin-top: -5px;
}

.article-p{
  font-size: 0.9em;
  padding-left:15px;
  padding-right: 0px;
  padding-bottom: 0px;

}

.avatar {
    overflow:hidden;
    -webkit-border-radius:50px;
    -moz-border-radius:50px;
    border-radius:50px;
    width:35px;
    height:35px;
}

.categories{
 float: right;
 font-size: 0.8em;
 margin-top: -23px;
 margin-right: 3px;

}

.categories-entertainment{
  background-color: #FFA703;
  padding: 2px;
}
.categories-LIVING{
  background-color: #00FCFF;
  padding: 2px;
}
.categories-LITERATURE{
  background-color: #6D8AFF;
  padding: 2px;
}
#bloc1, #bloc2, #bloc3
{
    display:inline;
    margin-right: 5px;
}

.entry-meta {
  font-size: 0.7em;
  color: #a7a7a7
}

.entry-meta a{
  color: #a7a7a7;
  text-decoration: none;
}

 .entry-meta a:hover{
  color: black;
}

.author-name{
  padding-top: 10px;
}

.article-content{
  float: right;
  width:70%;
  padding-top: 15px;
}

.float-my-children > * {
    float:left;
    margin-right:5px;
        display: -webkit-inline-box;

}

.clearfix {
    *zoom:1; /* for IE */
    padding-left:15px;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

/*END of content page*/

/* ADS SPACE*/
.ad-space{
  width: 454px;
  height: 250px;
  background-color:#B6E7D4; 
  text-align: center;
  padding-top: 100px;
  margin-bottom: 15px;

}

.side-ads{
  margin-left: -91px;
}

.video{
  width:454px;
  height:250px;

}

.video1{

  width:454px;
  height: 350px;
  background-color: #fff;
  margin-bottom: 15px;
}

.video1 label{
  color: #F56095;
  font-size: 1.5em;
  font-weight: bolder;
  margin-top: 5px;
}

.video-title label{
  padding-top: 8px;
  padding-left: 10px
}

.logo-hungry{
  float: right
}
.sharebuton{
   float: right; 
}
.icon-share{
   height: 20px;
}



/*mobile responsive*/

.primary-nav ,.mobile-primary-nav{
  display: none;
}

.sub-menu-mobile{
   display: none;
}

@media (max-width: 992px) {
body{
  max-width: 100%;
  width: auto;
  }
.primary-nav{
  display: block;

  }
.desktop{
  display: none;
}
.mobile{
  display: block
}
.sub-menu{
  display: none;
}

  .sub-menu-mobile{
    display: block;
    background-color:  #45E7AB;
  }


ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;}

.sub-item {
    float: left;
    font-size: 0.9em;
}

.sub-item a {
    display:  inline-block;
    color: black;
    text-align: center;
    padding: 7px;
    text-decoration: none;
}
  .makeapost{
    background-color: #b23ed8;
    padding-right: 4px;
    padding-left: 4px;
  }
  .makeapost a{
 color: #fff;
  }

.desktop-nav{
  display: none;
}
  .logo{
    padding-left: 50px;
  }

  .login{
    color: #fff;
    padding-left: 50px;
    font-family: 'Gotham' 'GOTHAM-BLACK';
    text-decoration: none !important;
  }

  .nav-collpase1{
    background-color: #45e7ab; 
  }
  
  .nav-collpase2{
    background-color:#35cf96;
  }

  .nav-collapse3{
    background-color: #45e7ab;
    padding-top: 5px;
    padding-bottom: 5px;
  }

  .followus{
    color: #000;
    font-family: 'Gotham' 'gotham-ultra';
    font-weight: bolder;
  }

  .content{
    text-decoration: none !important;
    margin: 0 auto;
    width: 100%;
    padding: 5px;
  }

  .sponsor-title h1 {
    text-decoration: none !important;
    font-size: 1.5em;
     padding-left: 0px; 
    padding-right: 0px; 
    text-align: center;
  }

  .sponsor-title p {
    font-size: 1.2em;
    padding-left: 10px;
    padding-right: 10px;
    text-align: left;
}
.clearsponsor {
    padding-left: 5px;
}
.sponsor {
    width: 100%;
        height: 332px;
  }
  .categories-sponsor {
    margin-top: 1px;
    float: left;
    margin-left: 5px;
  }
  .ad-space {
    text-decoration: none !important;
    width:  320px;    
    height: 100px;
    background-color: #b7b7b7;
    padding-top: 30px;
    color: white;
    font-weight: bolder;
  }

  .side-ads{
    text-decoration: none!important;
    margin-left: 0px;

  }
  
  .video1 {
    text-decoration: none !important;
    display: none !important;
    }

    .mainlogo{
      text-align: center;
    }
    
    .article{
      text-decoration: none;
          width: 100%;
    }

    .article-title h1 {
      text-decoration: none;
    font-size: 0.9em;
    margin-top: -165px;
    margin-left: 25px;

  } 
    .article-title2{
    text-decoration: none;
    font-size: 0.9em;
    margin-top: -231px;
    margin-left: 25px;
    }

    .clear-article{
    padding-left: 37px;
    position: absolute;
    }

    .categories {
    float: left;
    margin-left: 38px;
    }

    .article-img , .article-img-trending{
     width: 130px;
    height: 175px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    }

    .article-img-trending{
        width: 128px;
    height: 220px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    }

    .article-trending {
    height: 233px;
    width: 100%;
    }
    
    .cat-trend{
         margin-top: -9px;
    }
    .article-title2 h1 {
    font-size: 1em;
    padding-top: 5px;
      }

    .carousel{
        background-color: #fff;
  width: 100%;
  display: block;
    }
}

.carousel-head{
  color: #000;
  background-color: #45e7ab;
  width: 36%;
}

.carousel-head2{
  color: #000;
  background-color: #45e7ab;
  width: 27%;
}

.carousel-head h1{
    font-size: 1em;
    font-weight: bolder;
    padding: 5px;
}
.carousel-head2 h1{
    font-size: 1em;
    font-weight: bolder;
    padding: 5px;
}

.mySlides {display:none}
/* ... */

